# c-practice

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  buildlib.sh  compilecommands.bat  compilecommands.sh  run.bat  run.sh  temp
src/: arena.c  arena.h  game.c  game.h  load.c  load.h  main.c  parse.c  parse.h  reload.c  reload_win.c  transform.c  transform.h  types.h
src/editor/: build.bat  build.sh  editor.cpp
src/game/: build.bat  build.sh  game.c  game.h  transform.c  transform.h
src/physics/: build.bat  build.sh  physics.cpp  physics.h  physics_internal.hpp
src/renderer/: build.bat  build.sh  file.c  file.h  file_lin.c  file_win.c  glad.c  load.c  load.h  parse.c  parse.h  renderer.c  renderer.h  stb_image.h
src/shaders/: debug.frag  debug.vert  default.frag  default.vert  default_light.frag  default_light.vert  fontshader.frag  fontshader.vert  fullscreen.frag  fullscreen.vert  gui.frag  gui.vert  sdf.frag  skybox.frag  skybox.vert  text.frag  text.vert
src/testlib/: buildtest.sh  test.c  test.h
